estilização da pagina projetos

--- a/style.css
+++ b/style.css
@@ -341,3 +341,32 @@ article .icon {
     display: flex;
     flex-wrap: nowrap;
 }
+
+
+/*PROJECTS SECTION*/
+
+#projects {
+    position: relative;
+}
+
+.color-container {
+    border-color: rgb(163,163,163);
+    background: rgb(250,250,250);
+}
+
+.project-img{
+    width: 90%;
+    border-radius: 2rem;
+    height: 14rem;
+}
+
+
+.project-title{
+    margin: 1rem;
+    color: black;
+}
+
+.project-btn {
+    color: black;
+    border-color: rgb(163,163,163);
+}
