descrição do projeto 02

--- a/style.css
+++ b/style.css
@@ -371,6 +371,11 @@ article .icon {
     border-color: rgb(163,163,163);
 }
 
+.Project-information {
+    margin-bottom: 20px;
+    margin: 20px;
+}
+
 
 
 /* CONTACT */
